# A2A

./: .env.example  .gitignore  .tmp_demo_page.html  AGENT_FAILOVER_RECOVERY_README.md  AGENT_RUNTIME_SDK接入说明.md  Agent并发Slot说明.md  Agent技能匹配逻辑说明.md  BPEL输入输出字段与Schema统一分析.md  CMakeLists.txt  Crowd主模式与Supervisor监管系统实现说明.md  DEMO_GUIDE.md  DIRECT与CROWD调度模式对比说明.md  FRAMEWORK_OPTIMIZATION_REPORT.md  README.md  WORKFLOW_DESIGN.md  ZH_BRANCH_NOTES.md  algorithm_integration_guide_for_juniors.md  algorithm_library_flows.md  algorithm_library_model_integration_SPEC.md  attachment_fetcher.py  attachment_uploader.py  backend_file_formats.md  beachhead_workflow.bpel  bpel_workflow.py  decision_support_workflow.bpel  docker-compose.yml  idempotency_store.py  local_runtime.py  model_registry.py  monitoring.py  observability.py  protocol_contracts.py  pyproject.toml  quick_strike_workflow.bpel  reinforced_beachhead_workflow.bpel  requirements.txt  resource_monitor.py  skill_catalog.py  start_agents.sh  supervisor.py  (+14 more)
a2a_protocol/: client.py  messages.py  server.py
a2a_sdk/: __init__.py  agent_sdk.py  scheduler_sdk.py
agent/: __init__.py  compute_detect.py  config_profiles.py  orchestrator.py  pipeline.py
algolib_bridge/: __init__.py  client.py  config.py
artillery_agent/: main.py
assault_agent/: main.py
closed_loop_agent/: __init__.py  agent_results_mapping.py  algolib_runtime.py  closed_loop_core.py  main.py  mission_feature_adapter.py  mission_feature_schema.py  mission_model_service.py
commander_agent/: agent_leases.py  circuit_breaker.py  distributed_lock.py  error_classification.py  main.py  manager_api.py  recovery_api.py  scheduling_policy.py  task_decomposer.py  workflow_manager.py
commander_gateway/: __init__.py  __main__.py  app.py  clients.py  config.py  errors.py  schemas.py  service.py  store.py
compliance_authorization_agent/: main.py
config/: README.md  default.yaml  demo_local_uri.yaml
decision_agents/: __init__.py  __main__.py  a2a_adapter.py  a2a_payloads.py  a2a_service.py  config.py  schemas.py
decision_planning_agent/: main.py
doc/: LZH分支真实Agent接入改进清单.md  OLLAMA_QWEN3_LOCAL_RUNBOOK.md  QWEN3_1_7B_LOCAL_DEPLOYMENT_AND_TEST.md  QWEN3_1_7B_LOCAL_DEPLOYMENT_PLAN.md  ZH_ALGOLIB_HEARTBEAT_CHANGES.md
docs/: 26.5.22-周报.md  5-29 荆振洲 周报.md  A2A_ALGORITHMS_INTEGRATION.md  ALGORITHM_ACCEPTANCE.md  COMPUTE_PROFILE_GUIDE.md  Local模式说明.md  Nacos路由原理说明.md  OFFLINE_DEPLOYMENT.md  TENSORBOARD_COMPUTE_PROFILE_GUIDE.md  TIA_ALGORITHMS_INTEGRATION.md  TIA_ALGORITHM_PACKAGE_ARCHITECTURE.md  TRACK_THREAT_ALGORITHM_PACKAGES.md  Workflow说明.md  zh_branch_main_merge_and_sc2le_workflow.md  周报.md  图片上传到读取流程.md  小组代码合并规范.md  工作流恢复与附件流程图.md  时间测试结果与指标说明.md  最近改动详细说明.md
evaluator_agent/: main.py
examples/: integrated_demo_mission.json
execution_control_agent/: __init__.py  algolib_runtime.py  association_rules.py  execution_control_core.py  main.py  motion_prediction.py
integrated_system/: __init__.py  app.py  blackboard.py  branch_adapter.py  branch_runner.py  capability_map.py  demo_dashboard.py  mission_library.py  orchestrator.py  reporting.py  schemas.py  simulation_executor.py
llm/: __init__.py  client.py
models/: compliance_authorization_lr.metadata.json  compliance_authorization_lr.onnx  decision_planning_lr.onnx  decision_planning_lstm.metadata.json  sc2le_proxy_mission_model.metadata.json  sc2le_proxy_mission_model.pkl  xbd_damage_classifier.metadata.json
recon_agent/: main.py
registry/: nacos_manager.py
scripts/: accept_all_algorithms.py  acceptance_tia_algorithm_packages.py  auth_mock_server.py  bootstrap_a2a_algorithm_packages.py  bootstrap_tia_algorithm_packages.py  build_mission_vector_from_agent_results.py  build_situation.py  convert_dota_to_yolo.py  decision_agents_timing_probe.py  demo_agent_failover_reassignment.py  demo_bpel_workflows.py  demo_commander_failover_resume.py  demo_crowd_service_mode.py  demo_exception_resilience.py  demo_full_bpel_flow.py  demo_full_showcase.py  demo_integrated_concurrency.py  demo_local_uri_pipeline.py  demo_local_uri_sendmessage.ps1  demo_nacos_ui_states.py  demo_real_heartbeat_failover.py  demo_resume_after_restart.py  demo_tactical_intelligence_acceptance.py  demo_three_layer_concurrency.py  demo_workflow_manager.py  download_models.py  export_decision_agent_models.py  export_rtdetr_detections.py  extract_sc2le_task_features.py  extract_xbd_cnn_embeddings.py  extract_xbd_damage_features.py  log_model_params_tensorboard.py  mock_auth_server.py  package_offline_models.py  parse_motr_training_log.py  publish_tactical_intelligence_branch.ps1  resize_yolo_dataset.py  run_demo_agent.py  run_full_train_test.py  run_integrated_demo.py  (+20 more)
services/: requirements.txt
src/cli/: main.cpp
tactical_intelligence_agent/: DEMO_GUIDE.md  INTEGRATION_SYNC.md  MERGE_CHECKLIST.md  PROJECT_SYNC.md  README.md  URL_ATTACHMENT_GUIDE.md  __init__.py  artifact_publisher.py  batch_preparer.py  bootstrap.py  local_runtime_snippet.py  main.py  payload_adapter.py  service.py  test_tactical_intelligence_agent.py  相关项目技术.md
tests/: algorithm_registry_tests.cpp  http_server_tests.cpp  onnx_phase4_tests.cpp  phase5_execution_tests.cpp  python_service_test_support.h  python_service_validator_tests.cpp  schema_validator_tests.cpp  test_a2a_sdk.py  test_agent_circuit_breaker.py  test_agent_heartbeat.py  test_agent_leases.py  test_algolib_bridge.py  test_attachment_fetcher.py  test_bpel_workflow.py  test_closed_loop_integration.py  test_commander_gateway.py  test_compute_profile.py  test_decision_agents_a2a.py  test_decision_agents_algolib_runtime.py  test_distributed_agent_interfaces.py  test_distributed_agent_lock.py  test_error_classification.py  test_exception_diagnostics.py  test_execution_control_integration.py  test_framework_closure.py  test_geolocation.py  test_integrated_demo.py  test_llm_client.py  test_local_runtime.py  test_main.cpp  test_marl_ppo_scheduler.py  test_mission_feature_module.py  test_protocol_persistence_supervisor.py  test_rag_pipeline.py  test_resource_monitor.py  test_scheduling_policy.py  test_subskill_config.py  (+4 more)
(+622 files in other folders)
